--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.data.mongodb.authentication-database=
-spring.data.mongodb.username=
-spring.data.mongodb.password=
-spring.data.mongodb.port=
-spring.data.mongodb.host=
+spring.data.mongodb.authentication-database=test
+#spring.data.mongodb.username=
+#spring.data.mongodb.password=
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
 spring.data.mongodb.auto-index-creation=true
